--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-etherscan": "^2.1.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@truffle/hdwallet-provider": "^2.0.2",
     "chai": "^4.2.0",
     "chai-bignumber": "^3.0.0",
     "chai-bn": "^0.2.1",
     "ethereum-waffle": "^3.2.1",
     "ethers": "^5.0.24",
-    "hardhat": "^2.6.1",
+    "hardhat": "^2.8.3",
     "hardhat-contract-sizer": "^2.4.0",
-    "hardhat-deploy": "^0.7.0-beta.39",
+    "hardhat-deploy": "^0.10.4",
     "hardhat-gas-reporter": "^1.0.6",
     "web3": "^1.2.9"
   },
@@ -35,6 +36,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
     "eth-gas-reporter": "^0.2.23",
+    "hardhat-tracer": "^1.0.0-alpha.6",
     "mocha-skip-if": "^0.0.3",
     "solidity-linked-list": "^5.1.0",
     "transform": "^1.1.2"
