--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@defi-wonderland/smock": "^2.0.7",
+    "@eth-optimism/smock": "^1.1.10",
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-etherscan": "^2.1.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
